graphics/rawtherapee: mmap/lto

--- a/graphics/rawtherapee/Makefile
+++ b/graphics/rawtherapee/Makefile
@@ -55,6 +55,8 @@ CMAKE_ARGS+=	-DDOCDIR="${DOCSDIR}" \
 		-DDESKTOPDIR="${DESKTOPDIR}" \
 		-DDATADIR="${DATADIR}" \
 		-DCACHE_NAME_SUFFIX="" \
+		-DWITH_MYFILE_MMAP="OFF" \
+		-DWITH_LTO="ON" \
 		-Wno-dev \
 		-DCMAKE_AR:FILEPATH=${_AR} \
 		-DCMAKE_RANLIB:FILEPATH=${_RANLIB} \
