--- a/cad/solvespace/Makefile
+++ b/cad/solvespace/Makefile
@@ -1,10 +1,10 @@
 # $FreeBSD$
 
-PORTNAME=	solvespace
-PORTVERSION=	2.3
-PORTREVISION=	4
+PORTNAME=		solvespace
 DISTVERSIONPREFIX=	v
-CATEGORIES=	cad
+DISTVERSION=		2.1.rc1-417
+DISTVERSIONSUFFIX=	-gc6fc012
+CATEGORIES=		cad
 
 MAINTAINER=	swills@FreeBSD.org
 COMMENT=	Parametric 2d/3d CAD
@@ -15,22 +15,32 @@ LICENSE_FILE=	${WRKSRC}/COPYING.txt
 LIB_DEPENDS=	libpng.so:graphics/png \
 		libjson-c.so:devel/json-c \
 		libfontconfig.so:x11-fonts/fontconfig \
-		libfreetype.so:print/freetype2 \
-		libgtkmm-2.4.so:x11-toolkits/gtkmm24
+		libfreetype.so:print/freetype2
 
 USE_GITHUB=	yes
 GH_PROJECT=	libdxfrw:libdxfrw
-GH_TAGNAME=	8f95895:libdxfrw
+GH_TAGNAME=	87ff108:libdxfrw
 GH_SUBDIR=	extlib/libdxfrw:libdxfrw
 
 USES=		cmake compiler:c++11-lang gl gnome pkgconfig xorg
 USE_GL=		gl glu glew
-USE_GNOME=	atkmm gtk20 pangomm
+USE_GNOME=	atkmm pangomm
 USE_XORG=	x11
 USE_LDCONFIG=	yes
 INSTALLS_ICONS=	yes
 
 post-patch:
 	${REINPLACE_CMD} -e '/-stdlib=libc++/d' ${WRKSRC}/CMakeLists.txt
+
+OPTIONS_RADIO=		GTK
+OPTIONS_RADIO_GTK=	GTK2 GTK3
+OPTIONS_DEFAULT=	GTK3
+
+GTK2_USE=		GNOME=gtk20
+GTK2_LIB_DEPENDS=	libgtkmm-2.4.so:x11-toolkits/gtkmm24
+
+GTK3_USE=		GNOME=gtk30
+GTK3_LIB_DEPENDS=	libgtkmm-3.0.so:x11-toolkits/gtkmm30
+GTK3_CMAKE_ON=		-DGUI=gtk3
 
 .include <bsd.port.mk>
