--- a/x11/Makefile
+++ b/x11/Makefile
@@ -131,6 +131,7 @@
     SUBDIR += kf5-kwayland
     SUBDIR += kf5-kwindowsystem
     SUBDIR += kf5-plasma-framework
+    SUBDIR += kitty
     SUBDIR += konsole
     SUBDIR += lemonbar
     SUBDIR += libICE
