--- a/devel/libepoll-shim/Makefile
+++ b/devel/libepoll-shim/Makefile
@@ -3,6 +3,7 @@
 
 PORTNAME=	libepoll-shim
 PORTVERSION=	0.0.20190622
+PORTREVISION=	1
 CATEGORIES=	devel
 
 MAINTAINER=	x11@FreeBSD.org
@@ -10,13 +11,12 @@ COMMENT=	epoll shim implemented using kevent
 
 LICENSE=	MIT
 
+USES=		cmake
 USE_GITHUB=	yes
 GH_ACCOUNT=	jiixyj
 GH_PROJECT=	epoll-shim
 GH_TAGNAME=	a790d8d0998c7ca0dd243ad658dcfe7c4f355121
 USE_LDCONFIG=	yes
-
-USES=		cmake
 
 pre-install:
 	@${MKDIR} ${STAGEDIR}/${PREFIX}/include/libepoll-shim/sys
