Set PULSEAUDIO and other defaults in a bunch of places

--- a/audio/spotifyd/Makefile
+++ b/audio/spotifyd/Makefile
@@ -373,7 +373,7 @@ PLIST_FILES=	bin/spotifyd \
 PORTDOCS=	README.md
 
 OPTIONS_DEFINE=		DBUS DOCS PORTAUDIO PULSEAUDIO
-OPTIONS_DEFAULT=	PORTAUDIO
+OPTIONS_DEFAULT=	DBUS PULSEAUDIO
 
 DBUS_DESC=		D-Bus MPRIS support
 
