--- a/multimedia/qt5-multimedia/Makefile
+++ b/multimedia/qt5-multimedia/Makefile
@@ -29,7 +29,7 @@ QT_CONFIG=	xlib
 QT_DEFINES=	_QTMULTIMEDIA_DUMMY
 
 OPTIONS_DEFINE=			GSTREAMER OPENAL
-OPTIONS_DEFAULT=		ALSA GSTREAMER
+OPTIONS_DEFAULT=		GSTREAMER PULSEAUDIO
 OPTIONS_RADIO=			AUDIOPLUGIN
 OPTIONS_RADIO_AUDIOPLUGIN=	ALSA PULSEAUDIO
 OPTIONS_SUB=			yes
