gcc9: enable plugins support
Signed-off-by: Tobias Kortkamp <t@tobik.me>

--- a/pkgqueue.d/desktop-make.conf
+++ b/pkgqueue.d/desktop-make.conf
@@ -38,6 +38,7 @@ graphics_gimp-app_UNSET=	HELPBROWSER # make it webkit-free
 graphics_gimp_UNSET=		HELP PRINT
 graphics_gthumb_UNSET=		BRASERO SECRET WEBSERVICES YELP # make it webkit-free
 irc_irssi_UNSET=	PERL
+lang_gcc9_SET=		PLUGINS
 mail_mutt_SET=		SIDEBAR
 multimedia_ffmpeg_SET=	XCB
 multimedia_gstreamer1-plugins-all_UNSET=	LV2 PULSE RTMP
