afl++: enable GCC option

--- a/pkgqueue.d/desktop-make.conf
+++ b/pkgqueue.d/desktop-make.conf
@@ -43,6 +43,7 @@ mail_mutt_SET=		SIDEBAR
 multimedia_ffmpeg_SET=	XCB
 multimedia_gstreamer1-plugins-all_UNSET=	LV2 PULSE RTMP
 multimedia_mpv_SET=	SDL
+security_afl++_SET=	GCC
 sysutils_runit-faster_SET=	ROOT
 textproc_docproj_SET=	FOP
 www_hiawatha_SET=	LOADCHECK MONITOR TOMAHAWK
