--- a/x11/xorg/Makefile
+++ b/x11/xorg/Makefile
@@ -11,7 +11,7 @@ COMMENT=	X.Org complete distribution metaport
 
 USES=		metaport
 
-RUN_DEPENDS+=	${LOCALBASE}/libdata/pkgconfig/dri.pc:graphics/mesa-dri
+RUN_DEPENDS+=	${LOCALBASE}/libdata/pkgconfig/dri.pc:${MESA_DRI_PORT}
 
 # data
 RUN_DEPENDS+=	${LOCALBASE}/libdata/pkgconfig/xbitmaps.pc:x11/xbitmaps \
