devel/cereal: Import cereal 1.3.0

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -303,6 +303,7 @@
     SUBDIR += cdecl
     SUBDIR += cdialog
     SUBDIR += cdk
+    SUBDIR += cereal
     SUBDIR += cervisia
     SUBDIR += cflow
     SUBDIR += cflow2vcg
