cad/prusa-slicer: import prusa-slicer 2.2.0 alpha1

--- a/cad/Makefile
+++ b/cad/Makefile
@@ -82,6 +82,7 @@
     SUBDIR += p5-Verilog-Perl
     SUBDIR += pcb
     SUBDIR += pdnmesh
+    SUBDIR += prusa-slicer
     SUBDIR += py-gdspy
     SUBDIR += py-lcapy
     SUBDIR += py-phidl
